--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,14 @@
 {
-  "manifest_version": 3,
-  "name": "YouTube Sentiment Analysis",
-  "version": "1.0",
-  "description": "Analyzes YouTube video comments for sentiment.",
-  "action": {
-    "default_popup": "popup.html"
-  },
-  "permissions": ["scripting"]
-}
+    "manifest_version": 3,
+    "name": "YouTube Sentiment Analysis",
+    "version": "1.0",
+    "description": "Analyzes YouTube comments for sentiment.",
+    "action": {
+      "default_popup": "popup.html"
+    },
+    "permissions": ["tabs"],
+    "host_permissions": [
+      "http://localhost:8000/*",
+      "http://127.0.0.1:8000/*"
+    ]
+  }
