--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,16 @@
     "manifest_version": 3,
     "name": "YouTube Sentiment Analysis",
     "version": "1.0",
-    "description": "Analyzes YouTube comments for sentiment.",
+    "description": "Analyzes YouTube video comments for sentiment.",
     "action": {
       "default_popup": "popup.html"
     },
-    "permissions": ["tabs"],
+    "permissions": [
+      "tabs",
+      "activeTab"
+    ],
     "host_permissions": [
-      "http://localhost:8000/*",
-      "http://127.0.0.1:8000/*"
+      "http://localhost/*",
+      "https://www.googleapis.com/*"
     ]
   }
